[package]
name = "geoip-server-rs"
version = "0.1.0"
authors = ["Farhad Farahi <farhad@adjoe.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0"
actix-service = "1.0"
slog = "2.5.2"
slog-term = "2.6.0"
slog-async = "2.5.0"
slog-json = "2.3.0"
maxminddb = "0.14"
serde = "1.0.114"
reqwest = { version = "0.10", features = ["blocking", "json"] }
async-std = "1.6.2"
clap = "2.33.1"
flate2 = "1.0.16"
tar = "0.4.29"
anyhow = "1.0.31"
chrono = "0.4.13"
futures = "0.3.5"
